<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android News App</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="img_no">No Favorite Found</string>
    <string name="desc">desc</string>
    <string name="menu_share">Share</string>
    <string name="menu_next">Next</string>
    <string name="menu_fav">Fav</string>
    <string name="menu_back">Back</string>
    <string name="menu_favorite">My Favorite</string>
    <string name="menu_about">About</string>
    <string name="menu_moreapp">More App</string>
    <string name="menu_rateapp">Rate App</string>
    <string name="search_hint">Hint</string>
    <string name="refresh">Refresh</string>
    <string name="menu_search">Search</string>
    
     <!-- About Content -->
     <string name="app_email">example@mail.com</string>
     <string name="app_website">http://dimasword.com</string>
     <string name="app_description">Your App Description Here. \nLorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit. </string>  
    	
	<!-- push notification -->
    <string name="parse_application_id">dLgWa68vIY8rLPXC28EJNBP0L2mWtLlBKv0tsTtO</string>
    <string name="parse_client_key">VaprOvExGGNNxNGWinSwB44AEotcCVyVqtza95YC</string>
    
    <!-- play store application link i.e more apps -->
    <string name="play_more_apps">https://play.google.com/store/search?q=solodroid+application</string>

    <!-- Navigation Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Lates News</item>
        <item >All News</item>
        <item >Favorite</item>
        <item >About</item>
        <item >Exit</item>
    </string-array>
    
    <!-- List Item Icons(Images) with strings(text of company name) -->
    <!-- Keep them with titles array accordingly -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_description_grey600_24dp</item>
        <item>@drawable/ic_my_library_books_grey600_24dp</item>
        <item>@drawable/ic_favorite_grey600_24dp</item>
        <item>@drawable/ic_info_grey600_24dp</item>
        <item>@drawable/ic_cancel_grey600_24dp</item>
    </array>
    

	<!-- drawer_list_item Imageview Description  -->
    <string name="description_list_icon">Item Icon</string>
    
</resources>